fixed spacing issues on header content

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -52,7 +52,6 @@
 
    .fix-content-center-intro {
       width: 100%;
-      margin-bottom: 50px;
    }
 
    .beside {
@@ -65,7 +64,6 @@
    }
 
    .intro-buttons {
-      margin: 16px 0 0 0;
       width: 100%;
    }
 
