--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,8 @@ h1::after {
 .fix-content-center-intro {
    width: 1100px;
    margin: 0 auto;
-   margin-top: 110px;
+   margin-top: 80px;
+   margin-bottom: 20px;
 }
 
 .intro-btn-container {
